# image-comparer

./: .gitmodules  CMakeLists.txt  README.md
imagecomparer/: CMakeLists.txt  icons.qrc  iconsdark.qrc  imagecomparer.desktop  main.cpp
imagecomparer/include/: EmbeddedModule.hpp  FolderTreeView.hpp  FrameStack.hpp  HeadUpDisplay.hpp  MainWindow.hpp  NumpyStack.hpp  PlugIn.hpp  PythonConsole.hpp  PythonFileOpen.hpp  PythonIntegration.hpp  PythonPlugIn.hpp  TiffStackReader.hpp
imagecomparer/plugins/: CMakeLists.txt  diff_image.py  dummy_plugin.py  histogram.py  open_files.py
imagecomparer/source/: EmbeddedModule.cpp  FolderTreeView.cpp  MainWindow.cpp  NumpyStack.cpp  PlugIn.cpp  PythonConsole.cpp  PythonFileOpen.cpp  PythonIntegration.cpp  PythonPlugIn.cpp  TiffStackReader.cpp
imagecomparer/ui/: MainWindow.ui
opencvmatviewer/: CMakeLists.txt
opencvmatviewer/source/: HeadUpDisplay.cpp
opencvmatviewer/ui/: HeadUpDisplay.ui
python_binding/: CMakeLists.txt
python_binding/source/: _imagecomparer.cpp
snap/: snapcraft.yaml
snap/.snapcraft/: state
snap/gui/: imagecomparer.desktop
